--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,13 @@
         "symfony/console": "^6.3",
         "symfony/uid": "^6.3",
         "symfony/http-foundation": "^6.3",
-        "symfony/dependency-injection": "^6.3",
+        "symfony/dependency-injection": "^6.4",
         "symfony/http-kernel": "^6.3",
         "symfony/framework-bundle": "^6.3",
         "symfony/runtime": "^6.3",
-        "symfony/routing": "^6.3"
+        "symfony/routing": "^6.3",
+        "friendsofsymfony/elastica-bundle": "^6.3",
+        "symfony/yaml": "^6.4"
     },
     "autoload": {
         "psr-4": {
